# cuda-path-tracer

./: CMakeLists.txt  README.md
shader/: build.bat  shader.cu
src/: CMakeLists.txt  main.cpp
src/core/: io.cpp  io.h  renderer.cpp  renderer.h  texture.cpp  texture.h  window.cpp  window.h
src/math/: math_defs.h  math_float3.h  math_float3_fun.h  math_float3_lin.h  math_float3_std.h
src/optix/: optix_bvh.cpp  optix_bvh.h  optix_defs.h  optix_facade.cpp  optix_facade.h  optix_globals.cpp  optix_globals.h  optix_params.h  optix_sbt.cpp  optix_sbt.h
src/scene/: camera.cpp  camera.h  mesh.cpp  mesh.h  scene_builder.cpp  scene_builder.h  scene_defs.h  scene_facade.cpp  scene_facade.h
src/util/: algo.h  cuda_defs.h  memory.cpp  memory.h  random.h  shapes.h  util_rt_frsnl.h  util_rt_phase.h  util_rt_sampl.h
